--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,5 @@
 {
     "configurations": [
-        
         {
             "type": "java",
             "name": "Spring Boot-PadroesProjetoSpringApplication<padroes-projeto-spring>",
@@ -9,7 +8,8 @@
             "mainClass": "com.projetodio.padroes_projeto_spring.PadroesProjetoSpringApplication",
             "projectName": "padroes-projeto-spring",
             "args": "",
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/.env",
+           
         }
     ]
 }
